...
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editReminderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Reminder Message"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Save"
        android:textColor="@color/white"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline38"
        app:layout_constraintVertical_bias="0.736" />

    <Button
        android:id="@+id/deleteReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="Delete"
        android:textColor="@color/white"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline38"
        app:layout_constraintVertical_bias="0.736" />

    <Button
        android:id="@+id/backButtonEditReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="35sp"
...
