...
        app:srcCompat="@drawable/box" />

    <TextView
        android:id="@+id/addReminderViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Reminder"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="Add Reminder"
        android:textSize="35sp"
        app:backgroundTint="#0e62fe"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/reminderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Reminder Message"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="parent"
...
