<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/guideline56"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline60" />

    <NumberPicker
        android:id="@+id/minutesNumberPicker"
        android:layout_width="78dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toEndOf="@+id/secondsNumberPicker"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/hoursNumberPicker" />

    <NumberPicker
        android:id="@+id/secondsNumberPicker"
        android:layout_width="78dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/hoursNumberPicker" />

    <NumberPicker
        android:id="@+id/hoursNumberPicker"
        android:layout_width="78dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline60" />

    <TextView
        android:id="@+id/timerViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Timers"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:text="Back"
        app:backgroundTint="#1FCD66"
        app:layout_constraintBottom_toTopOf="@+id/guideline55"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="@+id/guideline60" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintTop_toTopOf="@+id/guideline55"
        app:srcCompat="@drawable/ibm_logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline61"
        app:layout_constraintTop_toTopOf="@+id/guideline55"
        app:srcCompat="@drawable/ucl_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="655dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="419dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="307dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="71dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="76dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="319dp" />
</androidx.constraintlayout.widget.ConstraintLayout>